testsuite/tests/grammar/invalid_lexers/token_action_4.lkt
from common import Example

lexer foo_lexer {
    @text(start_ignore_layout=1) Example <- "example"
}
